...
                            sheetDismiss()
                        },
                               label:  { Label(doctor.name!, systemImage: "person.fill").labelStyle(Cubic()) })
                    }
                    .listRowSeparator(.hidden)
                }
                .accessibilityIdentifier("DoctorsContactsList")
                .scrollContentBackground(.hidden)
                .listStyle(.plain)
            }
            Spacer()
        }
        .ignoresSafeArea(.keyboard)
...
