...
                            .autocorrectionDisabled(true)
                            .textInputAutocapitalization(.never)
                            .foregroundColor(Color("AstroGray"))
                            .multilineTextAlignment(.center)
                            .frame(width: 300)
                            .padding(EdgeInsets(top: 20, leading: 30, bottom: 20, trailing: 30))
                            .accessibility(identifier: "MailField")
                        Spacer()
                        Button(
                            action: {
                                signUpViewModel.recover(email: self.email)
                                emailSent = true
                                dismissView()
...
                                    .padding(EdgeInsets(top: 5, leading: 20, bottom: 5, trailing: 20))
                            }
                        )
                        .buttonStyle(.borderedProminent)
                        .padding(.bottom, 20)
                        .disabled(email.isEmpty ? true : false)
                        .accessibility(identifier: "RecoverButton")
                    }
                }
                .background {
                    RoundedRectangle(cornerRadius: 18)
                        .fill(Color(.white))
                        .shadow(color: Color(.systemGray4), radius: 1)
...
