...
                                .padding(.bottom, 12)
                                .accessibility(identifier: "PasswordField")
                            SecureField("Repeat Password", text: $passwordCheck)
                                .focused($objectFocused, equals: .repeatcodeword)
                                .textContentType(.password)
                                .keyboardType(.asciiCapable)
                                .accessibility(identifier: "RepeatPasswordField")
                        }
                        .autocorrectionDisabled(true)
                        .textInputAutocapitalization(.never)
                        .foregroundColor(Color("AstroGray"))
                        .multilineTextAlignment(.center)
                        .frame(width: 300)
...
                                    .padding(EdgeInsets(top: 5, leading: 20, bottom: 5, trailing: 20))
                            }
                        )
                        .buttonStyle(.borderedProminent)
                        .padding(.bottom, 20)
                        .disabled(email.isEmpty || password.isEmpty || passwordCheck.isEmpty)
                        .accessibility(identifier: "SignupButton")
                    }
                    .background {
                        RoundedRectangle(cornerRadius: 18)
                            .fill(Color(.white))
                            .shadow(color: Color(.systemGray4), radius: 1)
                    }
...
