...
                    Text("Continue")
                        .padding([.leading,.trailing],30)
                        .padding([.top,.bottom],5)
                        .font(.system(.headline))
                }
            )
            .accessibility(identifier: "OnBoardingButton")
            .buttonStyle(.borderedProminent)
            .tint(Color("AstroGray"))
            .padding(.bottom,20)
            // Displays the "Configure" botton IFF the current page is the one about notifications
            .opacity(currentPage != 2 ? 0 : 1)
        }
...
