...
            }
            .navigationTitle("Tickets")
            .toolbar{
                // Current date
                ToolbarItem(placement: .navigationBarLeading) {
                    Text(currentDate.formatted(.dateTime.day().month(.wide)).capitalized + " " + currentDate.formatted(.dateTime.year()))
                        .accessibilityIdentifier("CurrentDate")
                        .font(.system(size: 17, weight: .medium))
                        .foregroundColor(Color(.systemGray))
                }
                // Booking ticket button
                ToolbarItem(placement: .navigationBarTrailing) {
                    NavigationLink(destination: BookingView(bookingSuccess: $confirmedBooking)) {
...
